--- a/style.css
+++ b/style.css
@@ -516,6 +516,9 @@ a img {
 .comment-respond .form-submit {
   margin-top: 2.25em;
 }
+.comment-respond .comment-form-cookies-consent label {
+  display: inline-block;
+}
 
 .comments {
   padding: 2.25em 6.249% 1.5em;
